parser/NFCompilerParser.cpp





// Generated from NFCompiler.g4 by ANTLR 4.7.2


#include "NFCompilerListener.h"
#include "NFCompilerVisitor.h"

#include "NFCompilerParser.h"


using namespace antlrcpp;
using namespace antlr4;

NFCompilerParser::NFCompilerParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

NFCompilerParser::~NFCompilerParser() {
  delete _interpreter;
}

std::string NFCompilerParser::getGrammarFileName() const {
  return "NFCompiler.g4";
}

const std::vector<std::string>& NFCompilerParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& NFCompilerParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

NFCompilerParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NFCompilerParser::ProgramContext::START() {
  return getToken(NFCompilerParser::START, 0);
}

tree::TerminalNode* NFCompilerParser::ProgramContext::IDENT() {
  return getToken(NFCompilerParser::IDENT, 0);
}

tree::TerminalNode* NFCompilerParser::ProgramContext::LCB() {
  return getToken(NFCompilerParser::LCB, 0);
}

NFCompilerParser::DeclarationContext* NFCompilerParser::ProgramContext::declaration() {
  return getRuleContext<NFCompilerParser::DeclarationContext>(0);
}

NFCompilerParser::EntriesContext* NFCompilerParser::ProgramContext::entries() {
  return getRuleContext<NFCompilerParser::EntriesContext>(0);
}

tree::TerminalNode* NFCompilerParser::ProgramContext::RCB() {
  return getToken(NFCompilerParser::RCB, 0);
}

tree::TerminalNode* NFCompilerParser::ProgramContext::EOF() {
  return getToken(NFCompilerParser::EOF, 0);
}


size_t NFCompilerParser::ProgramContext::getRuleIndex() const {
  return NFCompilerParser::RuleProgram;
}

void NFCompilerParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void NFCompilerParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any NFCompilerParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::ProgramContext* NFCompilerParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, NFCompilerParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(NFCompilerParser::START);
    setState(59);
    match(NFCompilerParser::IDENT);
    setState(60);
    match(NFCompilerParser::LCB);
    setState(61);
    declaration();
    setState(62);
    entries();
    setState(63);
    match(NFCompilerParser::RCB);
    setState(64);
    match(NFCompilerParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EntriesContext ------------------------------------------------------------------

NFCompilerParser::EntriesContext::EntriesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NFCompilerParser::EntryContext *> NFCompilerParser::EntriesContext::entry() {
  return getRuleContexts<NFCompilerParser::EntryContext>();
}

NFCompilerParser::EntryContext* NFCompilerParser::EntriesContext::entry(size_t i) {
  return getRuleContext<NFCompilerParser::EntryContext>(i);
}


size_t NFCompilerParser::EntriesContext::getRuleIndex() const {
  return NFCompilerParser::RuleEntries;
}

void NFCompilerParser::EntriesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEntries(this);
}

void NFCompilerParser::EntriesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEntries(this);
}


antlrcpp::Any NFCompilerParser::EntriesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitEntries(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::EntriesContext* NFCompilerParser::entries() {
  EntriesContext *_localctx = _tracker.createInstance<EntriesContext>(_ctx, getState());
  enterRule(_localctx, 2, NFCompilerParser::RuleEntries);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(66);
      entry();
      setState(69); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == NFCompilerParser::ENTRY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EntryContext ------------------------------------------------------------------

NFCompilerParser::EntryContext::EntryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NFCompilerParser::EntryContext::ENTRY() {
  return getToken(NFCompilerParser::ENTRY, 0);
}

tree::TerminalNode* NFCompilerParser::EntryContext::LCB() {
  return getToken(NFCompilerParser::LCB, 0);
}

NFCompilerParser::Match_actionContext* NFCompilerParser::EntryContext::match_action() {
  return getRuleContext<NFCompilerParser::Match_actionContext>(0);
}

tree::TerminalNode* NFCompilerParser::EntryContext::RCB() {
  return getToken(NFCompilerParser::RCB, 0);
}


size_t NFCompilerParser::EntryContext::getRuleIndex() const {
  return NFCompilerParser::RuleEntry;
}

void NFCompilerParser::EntryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEntry(this);
}

void NFCompilerParser::EntryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEntry(this);
}


antlrcpp::Any NFCompilerParser::EntryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitEntry(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::EntryContext* NFCompilerParser::entry() {
  EntryContext *_localctx = _tracker.createInstance<EntryContext>(_ctx, getState());
  enterRule(_localctx, 4, NFCompilerParser::RuleEntry);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(NFCompilerParser::ENTRY);
    setState(72);
    match(NFCompilerParser::LCB);
    setState(73);
    match_action();
    setState(74);
    match(NFCompilerParser::RCB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Match_actionContext ------------------------------------------------------------------

NFCompilerParser::Match_actionContext::Match_actionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NFCompilerParser::Action_statementsContext* NFCompilerParser::Match_actionContext::action_statements() {
  return getRuleContext<NFCompilerParser::Action_statementsContext>(0);
}

NFCompilerParser::Match_flowContext* NFCompilerParser::Match_actionContext::match_flow() {
  return getRuleContext<NFCompilerParser::Match_flowContext>(0);
}

NFCompilerParser::Match_stateContext* NFCompilerParser::Match_actionContext::match_state() {
  return getRuleContext<NFCompilerParser::Match_stateContext>(0);
}


size_t NFCompilerParser::Match_actionContext::getRuleIndex() const {
  return NFCompilerParser::RuleMatch_action;
}

void NFCompilerParser::Match_actionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatch_action(this);
}

void NFCompilerParser::Match_actionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatch_action(this);
}


antlrcpp::Any NFCompilerParser::Match_actionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitMatch_action(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::Match_actionContext* NFCompilerParser::match_action() {
  Match_actionContext *_localctx = _tracker.createInstance<Match_actionContext>(_ctx, getState());
  enterRule(_localctx, 6, NFCompilerParser::RuleMatch_action);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NFCompilerParser::MATCH_FLOW) {
      setState(76);
      match_flow();
    }
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NFCompilerParser::MATCH_STATE) {
      setState(79);
      match_state();
    }
    setState(82);
    action_statements();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Action_statementsContext ------------------------------------------------------------------

NFCompilerParser::Action_statementsContext::Action_statementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NFCompilerParser::Action_flowContext* NFCompilerParser::Action_statementsContext::action_flow() {
  return getRuleContext<NFCompilerParser::Action_flowContext>(0);
}

NFCompilerParser::Action_stateContext* NFCompilerParser::Action_statementsContext::action_state() {
  return getRuleContext<NFCompilerParser::Action_stateContext>(0);
}


size_t NFCompilerParser::Action_statementsContext::getRuleIndex() const {
  return NFCompilerParser::RuleAction_statements;
}

void NFCompilerParser::Action_statementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAction_statements(this);
}

void NFCompilerParser::Action_statementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAction_statements(this);
}


antlrcpp::Any NFCompilerParser::Action_statementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitAction_statements(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::Action_statementsContext* NFCompilerParser::action_statements() {
  Action_statementsContext *_localctx = _tracker.createInstance<Action_statementsContext>(_ctx, getState());
  enterRule(_localctx, 8, NFCompilerParser::RuleAction_statements);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case NFCompilerParser::ACTION_FLOW: {
        setState(84);
        action_flow();
        break;
      }

      case NFCompilerParser::ACTION_STATE: {
        setState(85);
        action_state();
        break;
      }

      case NFCompilerParser::RCB: {
        break;
      }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Match_flowContext ------------------------------------------------------------------

NFCompilerParser::Match_flowContext::Match_flowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NFCompilerParser::Match_flowContext::MATCH_FLOW() {
  return getToken(NFCompilerParser::MATCH_FLOW, 0);
}

tree::TerminalNode* NFCompilerParser::Match_flowContext::LCB() {
  return getToken(NFCompilerParser::LCB, 0);
}

NFCompilerParser::ConditionContext* NFCompilerParser::Match_flowContext::condition() {
  return getRuleContext<NFCompilerParser::ConditionContext>(0);
}

tree::TerminalNode* NFCompilerParser::Match_flowContext::RCB() {
  return getToken(NFCompilerParser::RCB, 0);
}


size_t NFCompilerParser::Match_flowContext::getRuleIndex() const {
  return NFCompilerParser::RuleMatch_flow;
}

void NFCompilerParser::Match_flowContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatch_flow(this);
}

void NFCompilerParser::Match_flowContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatch_flow(this);
}


antlrcpp::Any NFCompilerParser::Match_flowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitMatch_flow(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::Match_flowContext* NFCompilerParser::match_flow() {
  Match_flowContext *_localctx = _tracker.createInstance<Match_flowContext>(_ctx, getState());
  enterRule(_localctx, 10, NFCompilerParser::RuleMatch_flow);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(NFCompilerParser::MATCH_FLOW);
    setState(89);
    match(NFCompilerParser::LCB);
    setState(90);
    condition();
    setState(91);
    match(NFCompilerParser::RCB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Match_stateContext ------------------------------------------------------------------

NFCompilerParser::Match_stateContext::Match_stateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NFCompilerParser::Match_stateContext::MATCH_STATE() {
  return getToken(NFCompilerParser::MATCH_STATE, 0);
}

tree::TerminalNode* NFCompilerParser::Match_stateContext::LCB() {
  return getToken(NFCompilerParser::LCB, 0);
}

NFCompilerParser::ConditionContext* NFCompilerParser::Match_stateContext::condition() {
  return getRuleContext<NFCompilerParser::ConditionContext>(0);
}

tree::TerminalNode* NFCompilerParser::Match_stateContext::RCB() {
  return getToken(NFCompilerParser::RCB, 0);
}


size_t NFCompilerParser::Match_stateContext::getRuleIndex() const {
  return NFCompilerParser::RuleMatch_state;
}

void NFCompilerParser::Match_stateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMatch_state(this);
}

void NFCompilerParser::Match_stateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMatch_state(this);
}


antlrcpp::Any NFCompilerParser::Match_stateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitMatch_state(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::Match_stateContext* NFCompilerParser::match_state() {
  Match_stateContext *_localctx = _tracker.createInstance<Match_stateContext>(_ctx, getState());
  enterRule(_localctx, 12, NFCompilerParser::RuleMatch_state);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(NFCompilerParser::MATCH_STATE);
    setState(94);
    match(NFCompilerParser::LCB);
    setState(95);
    condition();
    setState(96);
    match(NFCompilerParser::RCB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Action_flowContext ------------------------------------------------------------------

NFCompilerParser::Action_flowContext::Action_flowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NFCompilerParser::Action_flowContext::ACTION_FLOW() {
  return getToken(NFCompilerParser::ACTION_FLOW, 0);
}

tree::TerminalNode* NFCompilerParser::Action_flowContext::LCB() {
  return getToken(NFCompilerParser::LCB, 0);
}

NFCompilerParser::StatementContext* NFCompilerParser::Action_flowContext::statement() {
  return getRuleContext<NFCompilerParser::StatementContext>(0);
}

tree::TerminalNode* NFCompilerParser::Action_flowContext::RCB() {
  return getToken(NFCompilerParser::RCB, 0);
}


size_t NFCompilerParser::Action_flowContext::getRuleIndex() const {
  return NFCompilerParser::RuleAction_flow;
}

void NFCompilerParser::Action_flowContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAction_flow(this);
}

void NFCompilerParser::Action_flowContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAction_flow(this);
}


antlrcpp::Any NFCompilerParser::Action_flowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitAction_flow(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::Action_flowContext* NFCompilerParser::action_flow() {
  Action_flowContext *_localctx = _tracker.createInstance<Action_flowContext>(_ctx, getState());
  enterRule(_localctx, 14, NFCompilerParser::RuleAction_flow);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(NFCompilerParser::ACTION_FLOW);
    setState(99);
    match(NFCompilerParser::LCB);
    setState(100);
    statement();
    setState(101);
    match(NFCompilerParser::RCB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Action_stateContext ------------------------------------------------------------------

NFCompilerParser::Action_stateContext::Action_stateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NFCompilerParser::Action_stateContext::ACTION_STATE() {
  return getToken(NFCompilerParser::ACTION_STATE, 0);
}

tree::TerminalNode* NFCompilerParser::Action_stateContext::LCB() {
  return getToken(NFCompilerParser::LCB, 0);
}

NFCompilerParser::StatementContext* NFCompilerParser::Action_stateContext::statement() {
  return getRuleContext<NFCompilerParser::StatementContext>(0);
}

tree::TerminalNode* NFCompilerParser::Action_stateContext::RCB() {
  return getToken(NFCompilerParser::RCB, 0);
}


size_t NFCompilerParser::Action_stateContext::getRuleIndex() const {
  return NFCompilerParser::RuleAction_state;
}

void NFCompilerParser::Action_stateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAction_state(this);
}

void NFCompilerParser::Action_stateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAction_state(this);
}


antlrcpp::Any NFCompilerParser::Action_stateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitAction_state(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::Action_stateContext* NFCompilerParser::action_state() {
  Action_stateContext *_localctx = _tracker.createInstance<Action_stateContext>(_ctx, getState());
  enterRule(_localctx, 16, NFCompilerParser::RuleAction_state);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(NFCompilerParser::ACTION_STATE);
    setState(104);
    match(NFCompilerParser::LCB);
    setState(105);
    statement();
    setState(106);
    match(NFCompilerParser::RCB);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

NFCompilerParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<NFCompilerParser::Declare_entryContext *> NFCompilerParser::DeclarationContext::declare_entry() {
  return getRuleContexts<NFCompilerParser::Declare_entryContext>();
}

NFCompilerParser::Declare_entryContext* NFCompilerParser::DeclarationContext::declare_entry(size_t i) {
  return getRuleContext<NFCompilerParser::Declare_entryContext>(i);
}


size_t NFCompilerParser::DeclarationContext::getRuleIndex() const {
  return NFCompilerParser::RuleDeclaration;
}

void NFCompilerParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void NFCompilerParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


antlrcpp::Any NFCompilerParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NFCompilerVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

NFCompilerParser::DeclarationContext* NFCompilerParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 18, NFCompilerParser::RuleDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << NFCompilerParser::BASIC_TYPE)
      | (1ULL << NFCompilerParser::SET)
      | (1ULL << NFCompilerParser::MAP)
      | (1ULL << NFCompilerParser::RULE))) != 0)) {
      setState(108);
      declare_entry();
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declare_entryContext ------------------------------------------------------------------

NFCompilerParser::Declare_entryContext::Declare_entryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NFCompilerParser::TypeContext* NFCompilerParser::Declare_entryContext::type() {
  return getRuleContext<NFCompilerParser::TypeContext>(0);
}

tree::TerminalNode* NFCompilerParser::Declare_entryContext::IDENT() {
  return getToken(NFCompilerParser::IDENT, 0);
}

tree::TerminalNode* NFCompilerParser::Declare_entryContext::SEMICOLON() {
  return getToken(NFCompilerParser::SEMICOLON, 0);
}

tree::TerminalNode* NFCompilerParser::Declare_entryContext::LB() {
  return getToken(NFCompilerParser::LB, 0);
}

tree::TerminalNode* NFCompilerParser::Declare_entryContext::RB() {
  return getToken(NFCompilerParser::RB, 0);
}

tree::TerminalNode* NFCompilerParser::Declare_entryContext::ASSIGN() {
  return getToken(NFCompilerParser::ASSIGN, 0);
}

std::vector<NFCompilerParser::ExpressionContext *> NFCompilerParser::Declare_entryContext::expression() {
  return getRuleContexts<NFCompilerParser::ExpressionContext>();
}

NFCompilerParser::ExpressionContext* NFCompilerParser::Declare_entryContext::expression(size_t i) {
  return getRuleContext<NFCompilerParser::ExpressionContext>(i);
}


size_t NFCompilerParser::Declare_entryContext::getRuleIndex() const {
  return NFCompilerParser::RuleDeclare_entry;
}

void NFCompilerParser::Declare_entryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclare_entry(this);
}

void NFCompilerParser::Declare_entryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NFCompilerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclare_entry(this);
}

